// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`record can add custom event 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 6
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"input\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text\\",
                      \\"size\\": \\"40\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 7
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 8
                  }
                ],
                \\"id\\": 5
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 5,
    \\"data\\": {
      \\"tag\\": \\"tag1\\",
      \\"payload\\": 1
    }
  },
  {
    \\"type\\": 5,
    \\"data\\": {
      \\"tag\\": \\"tag2\\",
      \\"payload\\": {
        \\"a\\": \\"b\\"
      }
    }
  }
]"
`;

exports[`record captures nested stylesheet rules 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 6
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"input\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text\\",
                      \\"size\\": \\"40\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 7
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 8
                  }
                ],
                \\"id\\": 5
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 4,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"style\\",
            \\"attributes\\": {
              \\"_cssText\\": \\"@media  {\\\\n  body { background: rgb(0, 0, 0); }\\\\n}\\"
            },
            \\"childNodes\\": [],
            \\"id\\": 9
          }
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"id\\": 9,
      \\"adds\\": [
        {
          \\"rule\\": \\"body { color: #fff; }\\",
          \\"index\\": [
            0,
            0
          ]
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"id\\": 9,
      \\"removes\\": [
        {
          \\"index\\": [
            0,
            0
          ]
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"id\\": 9,
      \\"adds\\": [
        {
          \\"rule\\": \\"body { color: #ccc; }\\",
          \\"index\\": [
            0,
            0
          ]
        }
      ]
    }
  }
]"
`;

exports[`record captures style property changes 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 6
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"input\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text\\",
                      \\"size\\": \\"40\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 7
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 8
                  }
                ],
                \\"id\\": 5
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 4,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"style\\",
            \\"attributes\\": {
              \\"_cssText\\": \\"body { background: rgb(0, 0, 0); }\\"
            },
            \\"childNodes\\": [],
            \\"id\\": 9
          }
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 13,
      \\"id\\": 9,
      \\"set\\": {
        \\"property\\": \\"color\\",
        \\"value\\": \\"green\\"
      },
      \\"index\\": [
        0
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 13,
      \\"id\\": 9,
      \\"remove\\": {
        \\"property\\": \\"background\\"
      },
      \\"index\\": [
        0
      ]
    }
  }
]"
`;

exports[`record captures stylesheet rules 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 6
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"input\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text\\",
                      \\"size\\": \\"40\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 7
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 8
                  }
                ],
                \\"id\\": 5
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 4,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"style\\",
            \\"attributes\\": {
              \\"_cssText\\": \\"body { background: rgb(0, 0, 0); }\\"
            },
            \\"childNodes\\": [],
            \\"id\\": 9
          }
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"id\\": 9,
      \\"adds\\": [
        {
          \\"rule\\": \\"body { color: #fff; }\\"
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"id\\": 9,
      \\"removes\\": [
        {
          \\"index\\": 0
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"id\\": 9,
      \\"adds\\": [
        {
          \\"rule\\": \\"body { color: #ccc; }\\"
        }
      ]
    }
  }
]"
`;

exports[`record iframes captures stylesheet mutations in iframes 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 6
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"iframe\\",
                    \\"attributes\\": {
                      \\"srcdoc\\": \\"<button>Mysterious Button</button>\\"
                    },
                    \\"childNodes\\": [
                      {
                        \\"type\\": 3,
                        \\"textContent\\": \\"\\\\n        </body>\\\\n      </html>\\\\n    \\",
                        \\"id\\": 8
                      }
                    ],
                    \\"id\\": 7
                  }
                ],
                \\"id\\": 5
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"adds\\": [
        {
          \\"parentId\\": 7,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 0,
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"html\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"head\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [],
                    \\"rootId\\": 9,
                    \\"id\\": 11
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"body\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [
                      {
                        \\"type\\": 2,
                        \\"tagName\\": \\"button\\",
                        \\"attributes\\": {},
                        \\"childNodes\\": [
                          {
                            \\"type\\": 3,
                            \\"textContent\\": \\"Mysterious Button\\",
                            \\"rootId\\": 9,
                            \\"id\\": 14
                          }
                        ],
                        \\"rootId\\": 9,
                        \\"id\\": 13
                      }
                    ],
                    \\"rootId\\": 9,
                    \\"id\\": 12
                  }
                ],
                \\"rootId\\": 9,
                \\"id\\": 10
              }
            ],
            \\"id\\": 9
          }
        }
      ],
      \\"removes\\": [],
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"isAttachIframe\\": true
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 11,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"style\\",
            \\"attributes\\": {
              \\"_cssText\\": \\"body { background: rgb(0, 0, 0); }@media  {\\\\n  body { background: rgb(0, 0, 0); }\\\\n}\\"
            },
            \\"childNodes\\": [],
            \\"rootId\\": 9,
            \\"id\\": 15
          }
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"id\\": 15,
      \\"adds\\": [
        {
          \\"rule\\": \\"body { color: #fff; }\\"
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"id\\": 15,
      \\"adds\\": [
        {
          \\"rule\\": \\"body { color: #ccc; }\\",
          \\"index\\": [
            2,
            0
          ]
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"id\\": 15,
      \\"removes\\": [
        {
          \\"index\\": 0
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 13,
      \\"id\\": 15,
      \\"set\\": {
        \\"property\\": \\"color\\",
        \\"value\\": \\"green\\"
      },
      \\"index\\": [
        0
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"id\\": 15,
      \\"removes\\": [
        {
          \\"index\\": [
            1,
            0
          ]
        }
      ]
    }
  }
]"
`;

exports[`record is safe to checkout during async callbacks 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 6
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"input\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text\\",
                      \\"size\\": \\"40\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 7
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 8
                  }
                ],
                \\"id\\": 5
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [
        {
          \\"parentId\\": 5,
          \\"id\\": 7
        }
      ],
      \\"adds\\": [
        {
          \\"parentId\\": 5,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"p\\",
            \\"attributes\\": {},
            \\"childNodes\\": [],
            \\"id\\": 9
          }
        },
        {
          \\"parentId\\": 9,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"span\\",
            \\"attributes\\": {},
            \\"childNodes\\": [],
            \\"id\\": 10
          }
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 10,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 3,
            \\"textContent\\": \\"test\\",
            \\"id\\": 11
          }
        }
      ]
    }
  },
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 6
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 8
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"p\\",
                    \\"attributes\\": {},
                    \\"childNodes\\": [
                      {
                        \\"type\\": 2,
                        \\"tagName\\": \\"span\\",
                        \\"attributes\\": {},
                        \\"childNodes\\": [
                          {
                            \\"type\\": 3,
                            \\"textContent\\": \\"test\\",
                            \\"id\\": 11
                          }
                        ],
                        \\"id\\": 10
                      }
                    ],
                    \\"id\\": 9
                  }
                ],
                \\"id\\": 5
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [
        {
          \\"parentId\\": 9,
          \\"id\\": 10
        }
      ],
      \\"adds\\": [
        {
          \\"parentId\\": 5,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"span\\",
            \\"attributes\\": {},
            \\"childNodes\\": [],
            \\"id\\": 10
          }
        },
        {
          \\"parentId\\": 10,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 3,
            \\"textContent\\": \\"test\\",
            \\"id\\": 11
          }
        }
      ]
    }
  }
]"
`;

exports[`record without CSSGroupingRule support captures nested stylesheet rules 1`] = `
"[
  {
    \\"type\\": 4,
    \\"data\\": {
      \\"href\\": \\"about:blank\\",
      \\"width\\": 1920,
      \\"height\\": 1080
    }
  },
  {
    \\"type\\": 2,
    \\"data\\": {
      \\"node\\": {
        \\"type\\": 0,
        \\"childNodes\\": [
          {
            \\"type\\": 1,
            \\"name\\": \\"html\\",
            \\"publicId\\": \\"\\",
            \\"systemId\\": \\"\\",
            \\"id\\": 2
          },
          {
            \\"type\\": 2,
            \\"tagName\\": \\"html\\",
            \\"attributes\\": {},
            \\"childNodes\\": [
              {
                \\"type\\": 2,
                \\"tagName\\": \\"head\\",
                \\"attributes\\": {},
                \\"childNodes\\": [],
                \\"id\\": 4
              },
              {
                \\"type\\": 2,
                \\"tagName\\": \\"body\\",
                \\"attributes\\": {},
                \\"childNodes\\": [
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n          \\",
                    \\"id\\": 6
                  },
                  {
                    \\"type\\": 2,
                    \\"tagName\\": \\"input\\",
                    \\"attributes\\": {
                      \\"type\\": \\"text\\",
                      \\"size\\": \\"40\\"
                    },
                    \\"childNodes\\": [],
                    \\"id\\": 7
                  },
                  {
                    \\"type\\": 3,
                    \\"textContent\\": \\"\\\\n        \\\\n      \\\\n    \\",
                    \\"id\\": 8
                  }
                ],
                \\"id\\": 5
              }
            ],
            \\"id\\": 3
          }
        ],
        \\"id\\": 1
      },
      \\"initialOffset\\": {
        \\"left\\": 0,
        \\"top\\": 0
      }
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 0,
      \\"texts\\": [],
      \\"attributes\\": [],
      \\"removes\\": [],
      \\"adds\\": [
        {
          \\"parentId\\": 4,
          \\"nextId\\": null,
          \\"node\\": {
            \\"type\\": 2,
            \\"tagName\\": \\"style\\",
            \\"attributes\\": {
              \\"_cssText\\": \\"@media  {\\\\n  body { background: rgb(0, 0, 0); }\\\\n}\\"
            },
            \\"childNodes\\": [],
            \\"id\\": 9
          }
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"id\\": 9,
      \\"adds\\": [
        {
          \\"rule\\": \\"body { color: #fff; }\\",
          \\"index\\": [
            0,
            0
          ]
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"id\\": 9,
      \\"removes\\": [
        {
          \\"index\\": [
            0,
            0
          ]
        }
      ]
    }
  },
  {
    \\"type\\": 3,
    \\"data\\": {
      \\"source\\": 8,
      \\"id\\": 9,
      \\"adds\\": [
        {
          \\"rule\\": \\"body { color: #ccc; }\\",
          \\"index\\": [
            0,
            0
          ]
        }
      ]
    }
  }
]"
`;
